New open and save features

--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
         <style>
             body {
                 margin: 0;
+                user-select: none; /* so that users will not be able to select the divs */
             }
 
             .sidebar {
